Update CSS styles and remove unused code

--- a/assets/main.css
+++ b/assets/main.css
@@ -38,7 +38,7 @@ body {
     width: 100%;
 }
 
-a.atsLink {
+/* a.atsLink {
     color: blue;
 }
 
@@ -69,7 +69,7 @@ a:hover {
 .instructions:hover {
     border-color: green;
     color: green;
-}
+} */
 
 
 
