--- a/assets/index.css
+++ b/assets/index.css
@@ -13,6 +13,15 @@ h1.title {
     margin-bottom: 1em;
     color: antiquewhite
 }
+h2 {
+    font-size: 2rem;
+    font-weight: 700;
+    line-height: 1;
+    text-align: center;
+    margin-top: 1em;
+    margin-bottom: 1em;
+    color: antiquewhite
+}
 
 .emerg {
     text-align: center;
@@ -33,6 +42,7 @@ h1.title {
     gap: 2rem;
     padding: 0;
     margin-bottom: 1rem;
+    background-color: #23262d;
 }
 
 .link-card {
@@ -60,6 +70,7 @@ h1.title {
 }
 
 .link-card-h2 {
+    color: antiquewhite;
     margin: 0;
     font-size: 1.25rem;
     transition: color 0.6s cubic-bezier(0.22, 1, 0.36, 1);
